--- a/built-up-roofing.html
+++ b/built-up-roofing.html
@@ -110,7 +110,7 @@
             <nav class="main-menu clearfix">
                 <div class="main-menu__wrapper clearfix">
                     <div class="main-menu__wrapper-inner clearfix">
-                        <div class="main-menu__left">
+                        <div class="main-menu__right">
                             <div class="main-menu__main-menu-box">
                                 <a href="built-up-roofing.html#" class="mobile-nav__toggler"><i class="fa fa-bars"></i></a>
                                 <ul class="main-menu__list">
@@ -240,7 +240,7 @@
                                     <li class="dropdown">
                                         <a href="built-up-roofing.html#">Blog</a>
                                         <ul class="border-top-2px">
-                                            <li><a href="blog.html">Blog</a></li>
+                                             
                                             <li><a href="blog-carousel.html">Blog Carousel</a></li>
                                             <li><a href="blog-sidebar.html">Blog Sidebar</a></li>
                                             <li><a href="blog-details.html">Blog Details</a></li>
