--- a/testimonials-carousel.html
+++ b/testimonials-carousel.html
@@ -70,7 +70,7 @@
             <nav class="main-menu clearfix">
                 <div class="main-menu__wrapper clearfix">
                     <div class="main-menu__wrapper-inner clearfix">
-                        <div class="main-menu__left">
+                        <div class="main-menu__right">
                             <div class="main-menu__main-menu-box">
                                 <a href="testimonials-carousel.html#" class="mobile-nav__toggler"><i class="fa fa-bars"></i></a>
                                 <ul class="main-menu__list">
@@ -200,7 +200,7 @@
                                     <li class="dropdown">
                                         <a href="testimonials-carousel.html#">Blog</a>
                                         <ul class="border-top-2px">
-                                            <li><a href="blog.html">Blog</a></li>
+                                             
                                             <li><a href="blog-carousel.html">Blog Carousel</a></li>
                                             <li><a href="blog-sidebar.html">Blog Sidebar</a></li>
                                             <li><a href="blog-details.html">Blog Details</a></li>
