--- a/contacto.html
+++ b/contacto.html
@@ -141,8 +141,8 @@
                         </div>
                         <div class="contact-details__content">
                             <h4>
-                                <a href="tel:9200368090" class="contact-details__number-1">+92 (003) 68-090</a>
-                                <a href="tel:6668888000" class="contact-details__number-2">+ 666 8888 000</a>
+                                <a href="tel:+5213313277813" class="contact-details__number-1">+52 1 33 1327 7813</a>
+                                
                             </h4>
                         </div>
                     </li>
@@ -152,9 +152,9 @@
                         </div>
                         <div class="contact-details__content">
                             <h4>
-                                <a href="mailto:info@company.com" class="contact-details__number-1">info@company.com</a>
-                                <a href="mailto:needhelp@company.com"
-                                    class="contact-details__number-2">needhelp@company.com</a>
+                               
+                                <a href="mailto:bimstudio360@outlook.com"
+                                    class="contact-details__number-2">bimstudio360@outlook.com</a>
                             </h4>
                         </div>
                     </li>
@@ -163,7 +163,7 @@
                             <span class="icon-pin"></span>
                         </div>
                         <div class="contact-details__content">
-                            <h4>66 broklyn golden street <br> 600 New york. USA</h4>
+                            <h4>Guadalajara, Jal <br> Mexico</h4>
                         </div>
                     </li>
                 </ul>
@@ -177,14 +177,14 @@
                 <img src="assets/images/shapes/contact-page-shape-1.png" alt="">
             </div>
             <div class="container">
-                <div class="section-title text-center">
+                <div class="section-title" style="text-align: center;">
                     <div class="section-sub-title-box">
                         <p class="section-sub-title">Contactanos</p>
                         <div class="section-title-shape-1">
                             <img src="assets/images/shapes/section-title-shape-1.png" alt="">
                         </div>
                     </div>
-                    <h2 class="section-title__title" style="text-center">Escribenos en el siguiente formulario. <br> Le atenderemos rapidamente</h2>
+                    <h2 class="section-title__title">Escribenos en el siguiente formulario. <br> Le atenderemos rapidamente</h2>
                 </div>
                 <div class="row">
                     <div class="col-xl-12">
@@ -278,7 +278,7 @@
                                             <i class="fa fa-envelope"></i>
                                         </div>
                                         <div class="text">
-                                            <p><a href="mailto:BIMStudio360@outlook.com ">BIMStudio360@outlook.com</a></p>
+                                            <p><a href="mailto:bimstudio360@outlook.com ">bimstudio360@outlook.com</a></p>
                                         </div>
                                     </li>
                                     <li>
@@ -328,7 +328,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:BIMStudio360@outlook.com ">BIMStudio360@outlook.com</a>
+                    <a href="mailto:bimstudio360@outlook.com ">bimstudio360@outlook.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
@@ -337,11 +337,11 @@
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
                 <div class="mobile-nav__social">
-                    <a href="contact.html#" class="fab fa-twitter"></a>
-                    <a href="contact.html#" class="fab fa-facebook-square"></a>
-                    <a href="contact.html#" class="fab fa-pinterest-p"></a>
-                    <a href="contact.html#" class="fab fa-instagram"></a>
-                </div><!-- /.mobile-nav__social -->
+                        <a href="https://twitter.com/BimStudio360"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.facebook.com/StudioBIM360"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.youtube.com/channel/UCsjgdhgA0NRdLC_F6vKeTHQ"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.instagram.com/bimstudio360/"><i class="fab fa-instagram"></i></a>
+                  </div><!-- /.mobile-nav__social -->
             </div><!-- /.mobile-nav__top -->
 
 
