--- a/diseño.html
+++ b/diseño.html
@@ -156,7 +156,7 @@
 
                                     <li><a href="proejecutivo.html">PROYECTO EJECUTIVO<span class="fa fa-angle-right"></span></a></li>
 
-                                    <li><a href="PLANEACIÓNurbana.html">DISEÑO Y PLANEACIÓN URBANA <span class="fa fa-angle-right"></span></a></li>
+                                    <li><a href="planeacionurbana.html">DISEÑO Y PLANEACIÓN URBANA <span class="fa fa-angle-right"></span></a></li>
 
                                    
                                 </ul>
@@ -170,7 +170,7 @@
                                 <h2 class="service-details__need-help-title">Solicite Cotización para su diseño exclusivo</h2>
                                 <div class="service-details__need-help-contact">
                                     <p>Consultar</p>
-                                    <a href="tel:92003680903"> +92 (003) 68-090</a>
+                                    <a href="tel:+5213313277813"> +52 1 33 1327 7813</a>
                                 </div>
                             </div>
                             
@@ -243,7 +243,7 @@
                                             <i class="fa fa-envelope"></i>
                                         </div>
                                         <div class="text">
-                                            <p><a href="mailto:BIMStudio360@outlook.com ">BIMStudio360@outlook.com</a></p>
+                                            <p><a href="mailto:bimstudio360@outlook.com ">bimstudio360@outlook.com</a></p>
                                         </div>
                                     </li>
                                     <li>
@@ -293,7 +293,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:BIMStudio360@outlook.com ">BIMStudio360@outlook.com</a>
+                    <a href="mailto:bimstudio360@outlook.com ">bimstudio360@outlook.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
@@ -302,11 +302,11 @@
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
                 <div class="mobile-nav__social">
-                    <a href="single-play-roofing.html#" class="fab fa-twitter"></a>
-                    <a href="single-play-roofing.html#" class="fab fa-facebook-square"></a>
-                    <a href="single-play-roofing.html#" class="fab fa-pinterest-p"></a>
-                    <a href="single-play-roofing.html#" class="fab fa-instagram"></a>
-                </div><!-- /.mobile-nav__social -->
+                        <a href="https://twitter.com/BimStudio360"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.facebook.com/StudioBIM360"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.youtube.com/channel/UCsjgdhgA0NRdLC_F6vKeTHQ"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.instagram.com/bimstudio360/"><i class="fab fa-instagram"></i></a>
+                  </div><!-- /.mobile-nav__social -->
             </div><!-- /.mobile-nav__top -->
 
 
