--- a/modecre.html
+++ b/modecre.html
@@ -319,7 +319,7 @@
                                             <i class="fa fa-envelope"></i>
                                         </div>
                                         <div class="text">
-                                            <p><a href="mailto:BIMStudio360@outlook.com ">BIMStudio360@outlook.com</a></p>
+                                            <p><a href="mailto:bimstudio360@outlook.com ">bimstudio360@outlook.com</a></p>
                                         </div>
                                     </li>
                                     <li>
@@ -390,7 +390,7 @@
                                             <i class="fa fa-envelope"></i>
                                         </div>
                                         <div class="text">
-                                            <p><a href="mailto:BIMStudio360@outlook.com ">BIMStudio360@outlook.com</a></p>
+                                            <p><a href="mailto:bimstudio360@outlook.com ">bimstudio360@outlook.com</a></p>
                                         </div>
                                     </li>
                                     <li>
@@ -440,7 +440,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:BIMStudio360@outlook.com ">BIMStudio360@outlook.com</a>
+                    <a href="mailto:bimstudio360@outlook.com ">bimstudio360@outlook.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
@@ -449,11 +449,11 @@
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
                 <div class="mobile-nav__social">
-                    <a href="team-details.html#" class="fab fa-twitter"></a>
-                    <a href="team-details.html#" class="fab fa-facebook-square"></a>
-                    <a href="team-details.html#" class="fab fa-pinterest-p"></a>
-                    <a href="team-details.html#" class="fab fa-instagram"></a>
-                </div><!-- /.mobile-nav__social -->
+                        <a href="https://twitter.com/BimStudio360"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.facebook.com/StudioBIM360"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.youtube.com/channel/UCsjgdhgA0NRdLC_F6vKeTHQ"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.instagram.com/bimstudio360/"><i class="fab fa-instagram"></i></a>
+                  </div><!-- /.mobile-nav__social -->
             </div><!-- /.mobile-nav__top -->
 
 
