--- a/team.html
+++ b/team.html
@@ -546,7 +546,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:BIMStudio360@outlook.com ">BIMStudio360@outlook.com</a>
+                    <a href="mailto:bimstudio360@outlook.com ">bimstudio360@outlook.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
