--- a/usosbim.html
+++ b/usosbim.html
@@ -248,7 +248,7 @@
                                             <i class="fa fa-envelope"></i>
                                         </div>
                                         <div class="text">
-                                            <p><a href="mailto:BIMStudio360@outlook.com ">BIMStudio360@outlook.com</a></p>
+                                            <p><a href="mailto:bimstudio360@outlook.com ">bimstudio360@outlook.com</a></p>
                                         </div>
                                     </li>
                                     <li>
@@ -298,7 +298,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:BIMStudio360@outlook.com ">BIMStudio360@outlook.com</a>
+                    <a href="mailto:bimstudio360@outlook.com ">bimstudio360@outlook.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
