--- a/built-up-roofing.html
+++ b/built-up-roofing.html
@@ -545,7 +545,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:bimstudio360@outlook.com ">bimstudio360@outlook.com</a>
+                    <a href="mailto:BIMstudio360@outlook.com ">BIMstudio360@outlook.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
@@ -554,10 +554,10 @@
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
                 <div class="mobile-nav__social">
-                        <a href="https://twitter.com/BimStudio360"><i class="fab fa-twitter"></i></a>
+                        <a href="https://twitter.com/BIMStudio360"><i class="fab fa-twitter"></i></a>
                         <a href="https://www.facebook.com/StudioBIM360"><i class="fab fa-facebook"></i></a>
                         <a href="https://www.youtube.com/channel/UCsjgdhgA0NRdLC_F6vKeTHQ"><i class="fab fa-youtube"></i></a>
-                        <a href="https://www.instagram.com/bimstudio360/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/BIMstudio360/"><i class="fab fa-instagram"></i></a>
                   </div><!-- /.mobile-nav__social -->
             </div><!-- /.mobile-nav__top -->
 
