--- a/mep.html
+++ b/mep.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Bim Studio 360º</title>
+    <title>  BIMStudio360 360º</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
@@ -87,7 +87,7 @@
                                         <a href="servicios.html">Servicios</a>
                                         <ul class="border-top-2px">
                                             <li><a href="diseño.html">Diseño</a></li>
-                                            <li><a href="modelado.html">Modelado Bim</a></li>
+                                            <li><a href="modelado.html">Modelado BIM</a></li>
                                             <li><a href="implementaciones.html">Implementaciones</a></li>
                                             <li><a href="academico.html">Academico</a></li>
                                         </ul>
@@ -148,7 +148,7 @@
                             <div class="team-details__content">
                                 <div class="section-title text-left">
                                     <div class="section-sub-title-box">
-                                        <p class="section-sub-title">Servicios de Bim Studio 360</p>
+                                        <p class="section-sub-title">Servicios de  BIMStudio360 360</p>
                                         <div class="section-title-shape-1">
                                             <img src="assets/images/icon/1.png" alt="">
                                         </div>
@@ -273,10 +273,10 @@
                                     <p class="footer-widget__about-text">Síguenos</p>
                                 </div>
                                  <div class="site-footer__social">
-                                    <a href="https://twitter.com/BimStudio360"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://twitter.com/BIMStudio360"><i class="fab fa-twitter"></i></a>
                                     <a href="https://www.facebook.com/StudioBIM360"><i class="fab fa-facebook"></i></a>
                                     <a href="https://www.youtube.com/channel/UCsjgdhgA0NRdLC_F6vKeTHQ"><i class="fab fa-youtube"></i></a>
-                                    <a href="https://www.instagram.com/bimstudio360/"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/BIMstudio360/"><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -284,7 +284,7 @@
                             <div class="footer-widget__column footer-widget__explore clearfix">
                                 <h3 class="footer-widget__title">Links</h3>
                                 <ul class="footer-widget__explore-list list-unstyled clearfix">
-                                    <li><a href="nosotros.html">Sobre Bim STUDIO</a></li>
+                                    <li><a href="nosotros.html">Sobre  BIMStudio360</a></li>
                                     <li><a href="contacto.html">Contacto</a></li>
                                     <li><a href="index.html">Servicios</a></li>
                                     
@@ -302,7 +302,7 @@
                                             <i class="fa fa-envelope"></i>
                                         </div>
                                         <div class="text">
-                                            <p><a href="mailto:bimstudio360@outlook.com ">bimstudio360@outlook.com</a></p>
+                                            <p><a href="mailto:BIMstudio360@outlook.com ">BIMstudio360@outlook.com</a></p>
                                         </div>
                                     </li>
                                     <li>
@@ -322,7 +322,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="site-footer__bottom-inner">
-                                <p class="site-footer__bottom-text">© Bim STUDIO 2022 desarrollado por <a href="https://www.buckapi.us" target="_black">Buckapi</a></p>
+                                <p class="site-footer__bottom-text">©  BIMStudio360 2022 desarrollado por <a href="https://www.buckapi.us" target="_black">Buckapi</a></p>
                             </div>
                         </div>
                     </div>
@@ -341,13 +341,13 @@
                         <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="100ms">
                            <div class="footer-widget__column footer-widget__about">
                                 <div class="footer-widget__about-text-box">
-                                    <p class="footer-widget__about-text">Bim studio 360</p>
+                                    <p class="footer-widget__about-text"> BIMStudio360 360</p>
                                 </div>
                                  <div class="site-footer__social">
-                                    <a href="https://twitter.com/BimStudio360"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://twitter.com/BIMStudio360"><i class="fab fa-twitter"></i></a>
                                     <a href="https://www.facebook.com/StudioBIM360"><i class="fab fa-facebook"></i></a>
                                     <a href="https://www.youtube.com/channel/UCsjgdhgA0NRdLC_F6vKeTHQ"><i class="fab fa-youtube"></i></a>
-                                    <a href="https://www.instagram.com/bimstudio360/"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/BIMstudio360/"><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -373,7 +373,7 @@
                                             <i class="fa fa-envelope"></i>
                                         </div>
                                         <div class="text">
-                                            <p><a href="mailto:bimstudio360@outlook.com ">bimstudio360@outlook.com</a></p>
+                                            <p><a href="mailto:BIMstudio360@outlook.com ">BIMstudio360@outlook.com</a></p>
                                         </div>
                                     </li>
                                     <li>
@@ -393,7 +393,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="site-footer__bottom-inner">
-                                <p class="site-footer__bottom-text">© Bim STUDIO 2022 desarrollado por <a href="https://www.buckapi.us" target="_black">Buckapi</a></p>
+                                <p class="site-footer__bottom-text">©  BIMStudio360 2022 desarrollado por <a href="https://www.buckapi.us" target="_black">Buckapi</a></p>
                             </div>
                         </div>
                     </div>
@@ -423,7 +423,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:bimstudio360@outlook.com ">bimstudio360@outlook.com</a>
+                    <a href="mailto:BIMstudio360@outlook.com ">BIMstudio360@outlook.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
@@ -432,10 +432,10 @@
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
                 <div class="mobile-nav__social">
-                        <a href="https://twitter.com/BimStudio360"><i class="fab fa-twitter"></i></a>
+                        <a href="https://twitter.com/BIMStudio360"><i class="fab fa-twitter"></i></a>
                         <a href="https://www.facebook.com/StudioBIM360"><i class="fab fa-facebook"></i></a>
                         <a href="https://www.youtube.com/channel/UCsjgdhgA0NRdLC_F6vKeTHQ"><i class="fab fa-youtube"></i></a>
-                        <a href="https://www.instagram.com/bimstudio360/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/BIMstudio360/"><i class="fab fa-instagram"></i></a>
                   </div><!-- /.mobile-nav__social -->
             </div><!-- /.mobile-nav__top -->
 
@@ -463,8 +463,7 @@
     <!-- /.search-popup -->
 
     <a href="team-details.html#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fa fa-angle-up"></i></a>
-     <a href="https://wa.me/+5213313277813?text=Hola!!%20necesito%20de%20los%20servicios%20de%Bimstudio360" class="whatsapp" target="_blank" title="Hablemos por whatsapp !" style="color: white;"> 
-         <i class="fab fa-whatsapp"></i></a>
+      
 
 
     <script src="assets/vendors/jquery/jquery-3.6.0.min.js"></script>
