--- a/nosotros.html
+++ b/nosotros.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <title> Bim Studio 360º</title>
+   <title>  BIMStudio360 360º</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
@@ -87,7 +87,7 @@
                                         <a href="servicios.html">Servicios</a>
                                         <ul class="border-top-2px">
                                             <li><a href="diseño.html">Diseño</a></li>
-                                            <li><a href="modelado.html">Modelado Bim</a></li>
+                                            <li><a href="modelado.html">Modelado BIM</a></li>
                                             <li><a href="implementaciones.html">Implementaciones</a></li>
                                             <li><a href="academico.html">Academico</a></li>
                                         </ul>
@@ -124,7 +124,7 @@
                         <li><span>/</span></li>
                         <li>Nosotros</li>
                     </ul>
-                    <h2>BIM STUDIO 360</h2>
+                    <h2> BIMStudio360 360</h2>
                 </div>
             </div>
         </section>
@@ -159,12 +159,12 @@
                                 </div>
                                 <h2 class="section-title__title">¿Quienes somos?</h2>
                             </div>
-                            <p class="about-three__text" style="    font-size: 17px;">Somos un despacho orgullosamente Mexicano que radica en la ciudad de Guadalajara, Jal. Dedicado al desarrollo integral de proyectos utilizando la Metodología Bim en cada fase del proyecto para la edificación.</p>
+                            <p class="about-three__text" style="    font-size: 17px;">Somos un despacho orgullosamente Mexicano que radica en la ciudad de Guadalajara, Jal. Dedicado al desarrollo integral de proyectos utilizando la Metodología BIM en cada fase del proyecto para la edificación.</p>
                              <p class="about-three__text" style="    font-size: 17px;">
-                            Con más de 15 años de experiencia en el uso de herramientas Bim participando en proyectos de distintos tipos que van desde el Habitacional, Comercial, Educación, Salud, Cultural, Religión, Deporte, Industrial, Urbano, Infraestructura, entre otros.</p>
+                            Con más de 15 años de experiencia en el uso de herramientas BIM participando en proyectos de distintos tipos que van desde el Habitacional, Comercial, Educación, Salud, Cultural, Religión, Deporte, Industrial, Urbano, Infraestructura, entre otros.</p>
                              <p class="about-three__text" style="    font-size: 17px;">
                             Además de dedicarnos a enseñar con el gusto y la pasión con más de 10 años de trayectoria en lo académico, impartiendo catedra desde nivel licenciatura, maestrías, especialidades, diplomados, seminarios, cursos, talleres y conferencias, Colaborando con distintos centros académicos desde Institutos hasta Universidades.
-                            Así como implementando en despachos la metodología Bim mediante protocolos y estándares.
+                            Así como implementando en despachos la metodología BIM mediante protocolos y estándares.
                             </p>
                             
                             <a href="contacto.html" class="thm-btn about-three__btn"> <i class="fa fa-arrow-right"></i> Contactar</a>
@@ -332,7 +332,7 @@
                 <div class="cta-one__inner">
                     <div class="cta-one__left">
                             <p class="cta-one__sub-title">Servicio profesional de calidad</p>
-                            <h3 class="cta-one__title">¿¿Te gustaría cotizar tu proyecto?</h3>
+                            <h3 class="cta-one__title">¿Te gustaría cotizar tu proyecto?</h3>
                     </div>
                     <div class="cta-one__btn-box">
                         <a href="#" class="thm-btn cta-one__btn"> <i class="fa fa-arrow-right"></i> Cotize aqui</a>
@@ -358,13 +358,13 @@
                         <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="100ms">
                            <div class="footer-widget__column footer-widget__about">
                                 <div class="footer-widget__about-text-box">
-                                    <p class="footer-widget__about-text">Bim studio 360</p>
+                                    <p class="footer-widget__about-text"> BIMStudio360 360</p>
                                 </div>
                                  <div class="site-footer__social">
-                                    <a href="https://twitter.com/BimStudio360"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://twitter.com/BIMStudio360"><i class="fab fa-twitter"></i></a>
                                     <a href="https://www.facebook.com/StudioBIM360"><i class="fab fa-facebook"></i></a>
                                     <a href="https://www.youtube.com/channel/UCsjgdhgA0NRdLC_F6vKeTHQ"><i class="fab fa-youtube"></i></a>
-                                    <a href="https://www.instagram.com/bimstudio360/"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/BIMstudio360/"><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -390,7 +390,7 @@
                                             <i class="fa fa-envelope"></i>
                                         </div>
                                         <div class="text">
-                                            <p><a href="mailto:bimstudio360@outlook.com ">bimstudio360@outlook.com</a></p>
+                                            <p><a href="mailto:BIMstudio360@outlook.com ">BIMstudio360@outlook.com</a></p>
                                         </div>
                                     </li>
                                     <li>
@@ -410,7 +410,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="site-footer__bottom-inner">
-                                <p class="site-footer__bottom-text">© Bim STUDIO 2022 desarrollado por <a href="https://www.buckapi.us" target="_black">Buckapi</a></p>
+                                <p class="site-footer__bottom-text">©  BIMStudio360 2022 desarrollado por <a href="https://www.buckapi.us" target="_black">Buckapi</a></p>
                             </div>
                         </div>
                     </div>
@@ -441,7 +441,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:bimstudio360@outlook.com ">bimstudio360@outlook.com</a>
+                    <a href="mailto:BIMstudio360@outlook.com ">BIMstudio360@outlook.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
@@ -450,10 +450,10 @@
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
                <div class="mobile-nav__social">
-                        <a href="https://twitter.com/BimStudio360"><i class="fab fa-twitter"></i></a>
+                        <a href="https://twitter.com/BIMStudio360"><i class="fab fa-twitter"></i></a>
                         <a href="https://www.facebook.com/StudioBIM360"><i class="fab fa-facebook"></i></a>
                         <a href="https://www.youtube.com/channel/UCsjgdhgA0NRdLC_F6vKeTHQ"><i class="fab fa-youtube"></i></a>
-                        <a href="https://www.instagram.com/bimstudio360/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/BIMstudio360/"><i class="fab fa-instagram"></i></a>
                   </div><!-- /.mobile-nav__social -->
             </div><!-- /.mobile-nav__top -->
 
