--- a/testimonials-carousel.html
+++ b/testimonials-carousel.html
@@ -542,7 +542,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:bimstudio360@outlook.com ">bimstudio360@outlook.com</a>
+                    <a href="mailto:BIMstudio360@outlook.com ">BIMstudio360@outlook.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
@@ -583,8 +583,7 @@
 
     <a href="testimonials-carousel.html#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fa fa-angle-up"></i></a>
 
-     <a href="https://wa.me/+5213313277813?text=Hola!!%20necesito%20de%20los%20servicios%20de%Bimstudio360" class="whatsapp" target="_blank" title="Hablemos por whatsapp !" style="color: white;"> 
-         <i class="fab fa-whatsapp"></i></a>
+      
     <script src="assets/vendors/jquery/jquery-3.6.0.min.js"></script>
     <script src="assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendors/jarallax/jarallax.min.js"></script>
