--- a/academico.html
+++ b/academico.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>  BIMStudio360 360º</title>
+    <title>  BIMStudio360</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
@@ -141,7 +141,7 @@
                     <div class="col-xl-6 col-lg-6">
                         <div class="team-details__left">
                             <div class="team-details__img">
-                                <img src="assets/images/team/team-details-img.jpg" alt="">
+                                <img src="assets/images/gallery/academico/3.jpg" alt="">
                                 <div class="team-details__big-text">Academico</div>
                             </div>
                         </div>
@@ -151,9 +151,9 @@
                             <div class="team-details__content">
                                 <div class="section-title text-left">
                                     <div class="section-sub-title-box">
-                                        <p class="section-sub-title">Servicios de  BIMStudio360 360</p>
+                                        <p class="section-sub-title">Servicios de  BIMStudio360 </p>
                                         <div class="section-title-shape-1">
-                                            <img src="assets/images/shapes/section-title-shape-1.png" alt="">
+                                            <img src="assets/images/icon/5.png" alt="">
                                         </div>
                                     </div>
                                     <h2 class="section-title__title">DIGITALIZACIÓN ACADÉMICA</h2>
@@ -207,9 +207,9 @@
                     <div class="item">
                         <div class="gallery-page__single">
                             <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-1.jpg" alt="">
+                                <img src="assets/images/gallery/academico/1.jpg" alt="">
                                 <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-1.jpg"><span
+                                    <a class="img-popup" href="assets/images/gallery/academico/1.jpg"><span
                                             class="fas fa-plus"></span></a>
                                 </div>
                             </div>
@@ -220,9 +220,9 @@
                     <div class="item">
                         <div class="gallery-page__single">
                             <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-2.jpg" alt="">
+                                <img src="assets/images/gallery/academico/2.jpg" alt="">
                                 <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-2.jpg"><span
+                                    <a class="img-popup" href="assets/images/gallery/academico/2.jpg"><span
                                             class="fas fa-plus"></span></a>
                                 </div>
                             </div>
@@ -233,87 +233,9 @@
                     <div class="item">
                         <div class="gallery-page__single">
                             <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-3.jpg" alt="">
+                                <img src="assets/images/gallery/academico/3.jpg" alt="">
                                 <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-3.jpg"><span
-                                            class="fas fa-plus"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Gallery Page Single End-->
-                    <!--Gallery Page Single Start-->
-                    <div class="item">
-                        <div class="gallery-page__single">
-                            <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-4.jpg" alt="">
-                                <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-4.jpg"><span
-                                            class="fas fa-plus"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Gallery Page Single End-->
-                    <!--Gallery Page Single Start-->
-                    <div class="item">
-                        <div class="gallery-page__single">
-                            <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-5.jpg" alt="">
-                                <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-5.jpg"><span
-                                            class="fas fa-plus"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Gallery Page Single End-->
-                    <!--Gallery Page Single Start-->
-                    <div class="item">
-                        <div class="gallery-page__single">
-                            <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-6.jpg" alt="">
-                                <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-6.jpg"><span
-                                            class="fas fa-plus"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Gallery Page Single End-->
-                    <!--Gallery Page Single Start-->
-                    <div class="item">
-                        <div class="gallery-page__single">
-                            <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-1.jpg" alt="">
-                                <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-1.jpg"><span
-                                            class="fas fa-plus"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Gallery Page Single End-->
-                    <!--Gallery Page Single Start-->
-                    <div class="item">
-                        <div class="gallery-page__single">
-                            <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-2.jpg" alt="">
-                                <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-2.jpg"><span
-                                            class="fas fa-plus"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Gallery Page Single End-->
-                    <!--Gallery Page Single Start-->
-                    <div class="item">
-                        <div class="gallery-page__single">
-                            <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-3.jpg" alt="">
-                                <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-3.jpg"><span
+                                    <a class="img-popup" href="assets/images/gallery/academico/3.jpg"><span
                                             class="fas fa-plus"></span></a>
                                 </div>
                             </div>
