--- a/nosotros.html
+++ b/nosotros.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <title>  BIMStudio360 360º</title>
+   <title>  BIMStudio360 BIM</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
@@ -118,7 +118,7 @@
 
         <!--Page Header Start-->
         <section class="page-header">
-            <div class="page-header-bg" style="background-image: url(assets/images/backgrounds/pricing-one-bg.jpg)">
+            <div class="page-header-bg" style="background-color: #0000;">
             </div>
             <div class="container">
                 <div class="page-header__inner">
@@ -129,6 +129,10 @@
                     </ul>
                     <h2> BIMStudio360 360</h2>
                 </div>
+            </div>
+            <div id ="particles-js">
+                <script type="text/javascript" src ="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3744450/particles.js"></script>
+                <script type="text/javascript" src ="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3744450/particles.min.js"></script>
             </div>
         </section>
         <!--Page Header End-->
@@ -206,9 +210,9 @@
                     <div class="item">
                         <div class="gallery-page__single">
                             <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-1.jpg" alt="">
+                                <img src="assets/images/gallery/galeria/1.jpg" alt="">
                                 <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-1.jpg"><span
+                                    <a class="img-popup" href="assets/images/gallery/galeria/1.jpg"><span
                                             class="fas fa-plus"></span></a>
                                 </div>
                             </div>
@@ -219,9 +223,9 @@
                     <div class="item">
                         <div class="gallery-page__single">
                             <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-2.jpg" alt="">
+                                <img src="assets/images/gallery/galeria/2.jpg" alt="">
                                 <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-2.jpg"><span
+                                    <a class="img-popup" href="assets/images/gallery/galeria/2.jpg"><span
                                             class="fas fa-plus"></span></a>
                                 </div>
                             </div>
@@ -232,9 +236,9 @@
                     <div class="item">
                         <div class="gallery-page__single">
                             <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-3.jpg" alt="">
+                                <img src="assets/images/gallery/galeria/3.jpg" alt="">
                                 <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-3.jpg"><span
+                                    <a class="img-popup" href="assets/images/gallery/galeria/3.jpg"><span
                                             class="fas fa-plus"></span></a>
                                 </div>
                             </div>
@@ -245,9 +249,9 @@
                     <div class="item">
                         <div class="gallery-page__single">
                             <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-4.jpg" alt="">
+                                <img src="assets/images/gallery/galeria/4.jpg" alt="">
                                 <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-4.jpg"><span
+                                    <a class="img-popup" href="assets/images/gallery/galeria/4.jpg"><span
                                             class="fas fa-plus"></span></a>
                                 </div>
                             </div>
@@ -258,67 +262,27 @@
                     <div class="item">
                         <div class="gallery-page__single">
                             <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-5.jpg" alt="">
+                                <img src="assets/images/gallery/galeria/5.jpg" alt="">
                                 <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-5.jpg"><span
+                                    <a class="img-popup" href="assets/images/gallery/galeria/5.jpg"><span
                                             class="fas fa-plus"></span></a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!--Gallery Page Single End-->
-                    <!--Gallery Page Single Start-->
+                    
                     <div class="item">
                         <div class="gallery-page__single">
                             <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-6.jpg" alt="">
+                                <img src="assets/images/gallery/galeria/6.jpg" alt="">
                                 <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-6.jpg"><span
+                                    <a class="img-popup" href="assets/images/gallery/galeria/6.jpg"><span
                                             class="fas fa-plus"></span></a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!--Gallery Page Single End-->
-                    <!--Gallery Page Single Start-->
-                    <div class="item">
-                        <div class="gallery-page__single">
-                            <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-1.jpg" alt="">
-                                <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-1.jpg"><span
-                                            class="fas fa-plus"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Gallery Page Single End-->
-                    <!--Gallery Page Single Start-->
-                    <div class="item">
-                        <div class="gallery-page__single">
-                            <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-2.jpg" alt="">
-                                <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-2.jpg"><span
-                                            class="fas fa-plus"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Gallery Page Single End-->
-                    <!--Gallery Page Single Start-->
-                    <div class="item">
-                        <div class="gallery-page__single">
-                            <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-3.jpg" alt="">
-                                <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-3.jpg"><span
-                                            class="fas fa-plus"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Gallery Page Single End-->
+                    
                 </div>
             </div>
         </section>
