--- a/servicios.html
+++ b/servicios.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>  BIMStudio360 360º</title>
+    <title>  BIMStudio360 BIM</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
@@ -129,6 +129,11 @@
                     <h2>Nuestros servicios</h2>
                 </div>
             </div>
+
+            <div id ="particles-js">
+                <script type="text/javascript" src ="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3744450/particles.js"></script>
+                <script type="text/javascript" src ="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3744450/particles.min.js"></script>
+            </div>
         </section>
         <!--Page Header End-->
 
@@ -183,7 +188,6 @@
                                 <div class="col-lg-6 col-md-6">
                                      <ul>
                                         <li>BIM</li>
-                                        <li>paramétrico</li>
                                         <li>Gestión de modelados BIM</li>
                                         <li>Coord de modelados BIM</li>
                                         <li>Simulación 4D Y 5D</li>
@@ -222,7 +226,7 @@
                     <div class="col-xl-6 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="400ms">
                         <div class="services-one__single">
                             <div class="services-one__img">
-                                <img src="assets/images/services/digi.jpg" alt="">
+                                <img src="assets/images/services/academico.jpg" alt="">
                             </div>
                             <div class="services-one__content">
                                 <div class="services-one__icon">
@@ -231,7 +235,7 @@
                                     </span>
                                 </div>
                                 <h3 class="services-one__title"><a href="academico.html">Academico</a></h3>
-                                <p class="services-one__text">Asesoramiento y mas..</p>
+                                <p class="services-one__text">Asesoramiento y más..</p>
                                 <div class="services-one__read-more">
                                     <a href="academico.html">Sobre academico<i class="fa fa-arrow-right"></i></a>
                                 </div>
