--- a/arquitectonico.html
+++ b/arquitectonico.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>  BIMStudio360 360º</title>
+    <title>  BIMStudio360 BIM</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
@@ -152,7 +152,7 @@
                             <div class="team-details__content">
                                 <div class="section-title text-left">
                                     <div class="section-sub-title-box">
-                                        <p class="section-sub-title">Servicios de  BIMStudio360 360</p>
+                                        <p class="section-sub-title">Servicios de  BIMStudio360</p>
                                         <div class="section-title-shape-1">
                                             <img src="assets/images/icon/1.png" alt="">
                                         </div>
