imagenes de diseño

--- a/mode4d.html
+++ b/mode4d.html
@@ -187,7 +187,7 @@
                         <div class="team-details__left">
                             <div class="team-details__img">
                                 <img src="assets/images/team/mep.jpg" alt="">
-                                <div class="team-details__big-text">Diseño</div>
+                                
                             </div>
                         </div>
                     </div>
@@ -196,7 +196,7 @@
                             <div class="team-details__content">
                                 <div class="section-title text-left">
                                     <div class="section-sub-title-box">
-                                        <p class="section-sub-title">Servicios de  BIMStudio360 360</p>
+                                        <p class="section-sub-title">Servicios de  BIMStudio360</p>
                                         <div class="section-title-shape-1">
                                             <img src="assets/images/icon/1.png" alt="">
                                         </div>
