--- a/estructural.html
+++ b/estructural.html
@@ -150,7 +150,7 @@
                             <div class="team-details__content">
                                 <div class="section-title text-left">
                                     <div class="section-sub-title-box">
-                                        <p class="section-sub-title">Servicios de  BIMStudio360 360</p>
+                                        <p class="section-sub-title">Servicios de  BIMStudio360</p>
                                         <div class="section-title-shape-1">
                                             <img src="assets/images/icon/1.png" alt="">
                                         </div>
