--- a/proejecutivo.html
+++ b/proejecutivo.html
@@ -141,7 +141,7 @@
                         <div class="team-details__left">
                             <div class="team-details__img">
                                 <img src="assets/images/team/proyectoejecutivo.jpg" alt="">
-                                <div class="team-details__big-text">Diseño</div>
+                               
                             </div>
                         </div>
                     </div>
@@ -150,7 +150,7 @@
                             <div class="team-details__content">
                                 <div class="section-title text-left">
                                     <div class="section-sub-title-box">
-                                        <p class="section-sub-title">Servicios de  BIMStudio360 360</p>
+                                        <p class="section-sub-title">Servicios de  BIMStudio360 </p>
                                         <div class="section-title-shape-1">
                                             <img src="assets/images/icon/1.png" alt="">
                                         </div>
@@ -208,9 +208,9 @@
                     <div class="item">
                         <div class="gallery-page__single">
                             <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-1.jpg" alt="">
+                                <img src="assets/images/gallery/diseno/LüftungHofgebäude.jpg" alt="">
                                 <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-1.jpg"><span
+                                    <a class="img-popup" href="assets/images/gallery/diseno/LüftungHofgebäude.jpg"><span
                                             class="fas fa-plus"></span></a>
                                 </div>
                             </div>
@@ -221,9 +221,9 @@
                     <div class="item">
                         <div class="gallery-page__single">
                             <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-2.jpg" alt="">
+                                <img src="assets/images/gallery/diseno/HeizungGolden.jpg" alt="">
                                 <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-2.jpg"><span
+                                    <a class="img-popup" href="assets/images/gallery/diseno/HeizungGolden.jpg"><span
                                             class="fas fa-plus"></span></a>
                                 </div>
                             </div>
@@ -234,9 +234,9 @@
                     <div class="item">
                         <div class="gallery-page__single">
                             <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-3.jpg" alt="">
+                                <img src="assets/images/gallery/diseno/Untergeschoss.jpg" alt="">
                                 <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-3.jpg"><span
+                                    <a class="img-popup" href="assets/images/gallery/diseno/Untergeschoss.jpg"><span
                                             class="fas fa-plus"></span></a>
                                 </div>
                             </div>
@@ -247,80 +247,15 @@
                     <div class="item">
                         <div class="gallery-page__single">
                             <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-4.jpg" alt="">
+                                <img src="assets/images/gallery/diseno/NUGGET.jpg" alt="">
                                 <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-4.jpg"><span
+                                    <a class="img-popup" href="assets/images/gallery/diseno/NUGGET.jpg"><span
                                             class="fas fa-plus"></span></a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!--Gallery Page Single End-->
-                    <!--Gallery Page Single Start-->
-                    <div class="item">
-                        <div class="gallery-page__single">
-                            <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-5.jpg" alt="">
-                                <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-5.jpg"><span
-                                            class="fas fa-plus"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Gallery Page Single End-->
-                    <!--Gallery Page Single Start-->
-                    <div class="item">
-                        <div class="gallery-page__single">
-                            <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-6.jpg" alt="">
-                                <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-6.jpg"><span
-                                            class="fas fa-plus"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Gallery Page Single End-->
-                    <!--Gallery Page Single Start-->
-                    <div class="item">
-                        <div class="gallery-page__single">
-                            <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-1.jpg" alt="">
-                                <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-1.jpg"><span
-                                            class="fas fa-plus"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Gallery Page Single End-->
-                    <!--Gallery Page Single Start-->
-                    <div class="item">
-                        <div class="gallery-page__single">
-                            <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-2.jpg" alt="">
-                                <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-2.jpg"><span
-                                            class="fas fa-plus"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Gallery Page Single End-->
-                    <!--Gallery Page Single Start-->
-                    <div class="item">
-                        <div class="gallery-page__single">
-                            <div class="gallery-page__img">
-                                <img src="assets/images/gallery/gallery-page-3.jpg" alt="">
-                                <div class="gallery-page__icon">
-                                    <a class="img-popup" href="assets/images/gallery/gallery-page-3.jpg"><span
-                                            class="fas fa-plus"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Gallery Page Single End-->
+                    
                 </div>
             </div>
         </section>
