--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                         <div class="about-one__right">
                             <div class="section-title text-left">
                                 <div class="section-sub-title-box">
-                                    <p class="section-sub-title">Nosotros</p>
+                                    <p class="section-sub-title">NOSOTROS</p>
                                     <div class="section-title-shape-1">
                                         <img src="assets/images/icon/4.png" alt="">
                                     </div>
@@ -441,7 +441,7 @@
                                 <div class="services-one__top-left">
                                     <div class="section-title text-left">
                                         <div class="section-sub-title-box">
-                                            <p class="section-sub-title">Servicios</p>
+                                            <p class="section-sub-title">SERVICIOS</p>
                                             <div class="section-title-shape-1">
                                                 <img src="assets/images/icon/1.png" alt="">
                                             </div>
@@ -561,7 +561,7 @@
                         </div>
                     <div class="section-title text-center">
                         <div class="section-sub-title-box">
-                            <p class="section-sub-title">Portafolio</p>
+                            <p class="section-sub-title">PORTAFOLIO</p>
                             <div class="section-title-shape-1">
                                 <img src="assets/images/icon/3.png" alt="">
                             </div>
@@ -798,7 +798,7 @@
                                     <div class="section-title-shape-1">
                                         <img src="assets/images/icon/2.png" alt="">
                                     </div>
-                                    <p class="section-sub-title">Testimonios</p>
+                                    <p class="section-sub-title">TESTIMONIOS</p>
                                 </div>
                                 <h2 class="section-title__title">Lo que opinan de nosotros.</h2>
                             </div>
@@ -845,7 +845,7 @@
                                                 <p class="testimonial-one__client-sub-title">(IMPLEMENTACION BIM) / (PROYECTO)</p>
                                             </div>
                                         </div>
-                                        <p class="testimonial-one__text">Inicie y Inicie y conocí el mundo del Revit MEP y BIM gracias a Ramón. 
+                                        <p class="testimonial-one__text">Inicie y conocí el mundo del Revit MEP y BIM gracias a Ramón. 
                                         Los cursos que el imparte son bastante personalizados, es abierto, cuenta con experiencia, es atento con cada duda que tienes. 
                                         Estamos contentos y agradecidos con los resultados seguiremos preparándonos y tomando cursos con Ramón.
                                         Gracias por lo que me has enseñado, por apoyarme cuando se necesita y por todo. 
