--- a/portafolio.html
+++ b/portafolio.html
@@ -261,6 +261,27 @@
                 </div>
             </div>
         </section>
+
+        <section class="cta-one" style="background-image: url(assets/images/backgrounds/process-bg1.jpg);">
+             
+            <div class="cta-one__img-box">
+                <div class="cta-one__img">
+                    <img src="assets/images/backgrounds/why-choose-one-bg.jpg" alt="">
+                </div>
+            </div>
+            <div class="container">
+                <div class="cta-one__inner">
+                    <div class="cta-one__left">
+                        <p class="cta-one__sub-title">Servicio profesional de calidad</p>
+                            <h3 class="cta-one__title">¿Te gustaría cotizar tu proyecto?</h3>
+                    </div>
+                    <div class="cta-one__btn-box">
+                        <a href="contacto.html" class="thm-btn cta-one__btn"> <i class="fa fa-arrow-right"></i> Cotize aqui</a>
+                    </div>
+                </div>
+            </div>
+
+        </section>
         <!--Work Page End-->
 
         <!--Site Footer Start-->
