--- a/servicios.html
+++ b/servicios.html
@@ -117,7 +117,7 @@
 
         <!--Page Header Start-->
         <section class="page-header">
-            <div class="page-header-bg" style="background-color: #0000;">
+            <div class="page-header-bg" style="background-image: url(assets/images/backgrounds/pricing-one-bg.jpg)">
             </div>
             <div class="container">
                 <div class="page-header__inner">
@@ -479,6 +479,27 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section class="cta-one" style="background-image: url(assets/images/backgrounds/process-bg1.jpg);">
+             
+            <div class="cta-one__img-box">
+                <div class="cta-one__img">
+                    <img src="assets/images/backgrounds/why-choose-one-bg.jpg" alt="">
+                </div>
+            </div>
+            <div class="container">
+                <div class="cta-one__inner">
+                    <div class="cta-one__left">
+                        <p class="cta-one__sub-title">Servicio profesional de calidad</p>
+                            <h3 class="cta-one__title">¿Te gustaría cotizar tu proyecto?</h3>
+                    </div>
+                    <div class="cta-one__btn-box">
+                        <a href="contacto.html" class="thm-btn cta-one__btn"> <i class="fa fa-arrow-right"></i> Cotize aqui</a>
+                    </div>
+                </div>
+            </div>
+
         </section>
         <!--Site Footer Start-->
        <footer class="site-footer">
